# chatly-rust-react

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  middleware.ts  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
app/api/auth/[...nextauth]/: route.ts
app/login/: page.tsx
app/signup/: page.tsx
apps/server/: Cargo.toml  project.json
apps/server/src/: main.rs  redis.rs  socket_handlers.rs
apps/web/: package.json  project.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: JoinOrCreateModal.tsx  Messages.tsx  SendMessage.tsx
apps/web/components/ui/: dialog.tsx
apps/web/hooks/: index.ts  useSocket.tsx
apps/web/providers/: SocketProvider.tsx
components/: Box.tsx  ChatContainer.tsx  ChatHeader.tsx  ChatWindow.tsx  CreateGroup.tsx  GroupItem.tsx  GroupList.tsx  Header.tsx  JoinGroup.tsx  JoinOrCreateModal.tsx  Layout.tsx  MessageInput.tsx  Messages.tsx  NoData.tsx  SendMessage.tsx  Sidebar.tsx  ToggleTheme.tsx  index.ts  index.tsx
components/ui/: Loader.tsx  index.ts
configs/: auth.ts  header.ts  index.ts  menuOptions.ts  sidebar.ts
hooks/: index.ts  useGroupStore.tsx  useMessagesStore.tsx  useModalStore.tsx  useRoomStore.tsx
lib/: apiHandlers.ts  axios.ts  prisma.ts
prisma/: ca.pem  schema.prisma
prisma/migrations/20240816141851_init/: migration.sql
providers/: ModalProvider.tsx  NextAuthProvider.tsx  SocketProvider.tsx  index.ts
scripts/: dev.sh
server/: Cargo.toml  Dockerfile
server/src/: main.rs  models.rs  redis.rs  routes.rs  server.rs  session.rs  socket_handlers.rs
server/src/api/: mod.rs
server/src/api/handlers/: messages.rs  mod.rs  rooms.rs  users.rs
server/src/utils/: constants.rs  helpers.rs  mod.rs
utils/: constants.ts  dummyMessages.ts  helpers.ts  index.ts  types.ts
web/: .gitignore  package.json
web/app/: page.tsx
web/hooks/: useMessagesStore.tsx
