
[workspace]
resolver = '2'
members = [
	'apps/server',
]

[profile.release]
lto = true

[workspace.dependencies]
socketioxide = "0.10.0"
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tracing = "0.1.40"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
chrono = "0.4.31"
