[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.3.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.1"
# rand = "0.8.5"
env_logger = "0.11.5"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.0", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.81"
